# geant4-sandbox

./: .gitignore  CMakeLists.txt  README.md  gui_menu.mac  init.mac  main.cpp  pythiaInput.cmd  vis.mac
g4PhysicsTableParser/: CMakeLists.txt  g4PhysicsTableReader.cpp  main.cpp
g4PhysicsTableParser/include/: G4PhysicsTableParser.hh
g4PhysicsTableParser/src/: G4PhysicsTableParser.cpp
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrintInfo.hh  PythiaGenerator.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  PythiaGenerator.cpp  RunAction.cpp  SteppingAction.cpp
